# ski-scraper

./: .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
ski_scraper/: api.py  models.py  scraper.py
tests/: test_scraper.py
