[tool.poetry]
name = "ski-scraper"
version = "0.1.0"
description = ""
authors = ["davidemarcoli <davide@marcoli.ch>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.6"
uvicorn = "^0.34.0"
beautifulsoup4 = "^4.12.3"
requests = "^2.32.3"
pandas = "^2.2.3"
aiohttp = "^3.11.11"
pydantic = "^2.10.4"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pytest-asyncio = "^0.25.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
